Fix Margin Spacing in CSS Style

--- a/FrontEnd/styles.css
+++ b/FrontEnd/styles.css
@@ -57,23 +57,16 @@ body {
     padding: 0 20px;
 }
 
-.main__header {
-    color: #222222;
-}
-
 .form {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
+    margin: 0 0 50px;
 }
 
 .form__input {
-    width: 100%
-}
-
-.form__label {
-    display: block;
-    margin-bottom: 10px;
+    width: 100%;
+    margin: 0;
 }
 
 .form__textarea {
@@ -106,7 +99,7 @@ body {
 }
 
 .entry {
-    margin-top: 50px;
+    margin: 0 0 50px;
 }
 
 .entry__title {
@@ -135,7 +128,7 @@ body {
 }
 
 .footer__content {
-    max-width: 640px;
+    max-width: 600px;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
